css/style.css
/* ... */
.counter-boxed-warrper:before{
    content: '';
    width: 100%;
    height: 64%;
    position: absolute;
    top: 0;
    left: 0;
    background: #f1f6fc;
    z-index: -1;
    border-radius: 0 0px 274px 0px;
}
.counter-boxed{
    padding: 30px 20px 0;
 }
 .counter-boxed .counter{
    font-size: 36px
 }
.box-list .text-bismark {
    color: #96aabf;
    font-size: 16px
}
@media(max-width: 767px){

}

/* ##### demo-video Area CSS ##### */
.demo-video{
    position: relative;
}
.demo-video .welcome-video-area{
    margin-top: 0
}
@media (max-width: 992px){
    .vertical-social{
        display: none !important;
    }
}

.vertical-social {
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    background: #0d003b;
    height: 370px !important;
    margin-left: 30px;
    border-radius: 40px;
    padding: 30px 15px;
    z-index: 999;
    transition: 1s;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    box-shadow: 0px 4px 13px 0 rgba(168,67,253,.3);
    overflow: hidden;
    border-bottom: 3px solid #a843fd;
}
.vertical-social li{
    padding: 7px 0;
    text-align: center;
}
.vertical-social li a{
    color: #fff;
    opacity: .6;
    font-size: 22px;
}
.vertical-social li a:hover{
    opacity: 1
}
/* ##### trust Area CSS ##### */
.trust-section{
    position: relative;
}
.trust-item{
    background-color: #fff;
    border-radius: 10px;
    margin-bottom: 30px;
    padding: 0 35px;
    min-height: 205px;
    padding-top: 37px;
    padding-bottom: 25px;
    box-shadow: 4px 4px 10px 0 rgba(168,67,253,.3);
    overflow: hidden;
    border-bottom: 3px solid #a843fd;
}
.ico-platform-logo{
    margin-bottom: 25px;
    min-height: 75px
}
@media (max-width: 767px){
    .ico-platform-logo{
        min-height: 107px
    }
}
.check {
    height: 40px;
    margin: 0 -10px;
    background-color: rgba(13,0,59,.9);
    border-radius: 5px;
    color: #25cbd3;
    position: relative;
}
.check .value {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    font-size: 24px;
    font-weight: 600;
    text-shadow: 0 0 5px rgba(0,243,255,.5);
}
.check .check-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    background: url(../img/svg/checkmark.svg) 50% no-repeat;
    background-size: contain;
    width: 31px;
    height: 23px;
}
.gradient-section-bg{
    background-image: linear-gradient(106deg,#6c7cf5,#1a2dab);
    background-image: -webkit-linear-gradient(106deg,#6c7cf5,#1a2dab);
}
.dark-sec{
    background: #181734
}
.token-distribution{
    padding-bottom: 100px;
    overflow: hidden;
}

@media (max-width: 767px) {
    .token-info-wapper{
        margin-top: 30px;
    }
}
.token-information{
    position: relative;
}
.token-information span{
    position: absolute;
    width: 30px;
    height: 30px;
    left: 0;
    border-radius: 50%;
}
.token-information li{
    padding: 5px 0;
    padding-left: 50px;
    position: relative;
}
.token-information h6{
    color: #fff
}
.token-information .one{
    border: 7px solid #997dea
}
.token-information .two{
    border: 7px solid #e66392
}
.token-information .three{
    border: 7px solid #2acd72
}
.token-information .four{
    border: 7px solid #1eb8e0
}
.token-information .five{
    border: 7px solid #b843b6
}
.token-information .six{
    border: 7px solid #f5a67e
}
.token-information .seven{
    border: 7px solid #e16e3a
}
.token-information .eight{
    border: 7px solid #4581da
}
.token-info {
    width: 100%;
    margin-bottom: 10px;
    float: left;
    display: -ms-flexbox;
    display: flex;
}
.token-info .info-wrapper {
    border-radius: 0 10px 10px 0;
    padding: 10px 15px;
    padding-left: 75px;
    background: rgba(255,255,255,0.05);
    border: solid 1px rgba(255,255,255,0.25);
    width: 100%;
    position: relative;
    -ms-flex: 1;
    flex: 1;
    display: -ms-flexbox;
    display: flex;
    box-shadow: 0px 2px 27px 0px rgba(154, 161, 171, 0.18);
    -webkit-box-shadow: 0px 2px 27px 0px rgba(154, 161, 171, 0.18);
}
.token-info .info-wrapper.one{
    border-left: 7px solid #997dea
}
.token-info .info-wrapper.two{
    border-left: 7px solid #e66392
}
.token-info .info-wrapper.three{
    border-left: 7px solid #2acd72
}
.token-info .info-wrapper.four{
    border-left: 7px solid #1eb8e0
}
.token-info .info-wrapper.five{
    border-left: 7px solid #b843b6
}
.token-info .info-wrapper.six{
    border-left: 7px solid #f5a67e
}
.token-info .info-wrapper.seven{
    border-left: 7px solid #e16e3a
}
.token-info .info-wrapper.eight{
    border-left: 7px solid #4581da
}

.info-wrapper .token-icon {
    left: 12px;
    width: 38px;
    height: 38px;
    font-size: 25px;
    line-height: 38px;
    font-weight: 700;
    opacity: 1;
    color: #fff;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-position: 50%;
    background-size: contain;
}
.info-wrapper .token-icon.img{
    opacity: 1
}
.info-wrapper .token-descr {
    display: block;
    font-size: 14px;
    color: #fff;
    padding-left: 0px;
    font-weight: 300;
    line-height: 1.25;
}
/* ##### Service Area CSS ##### */

.service_single_content {
    position: relative;
    z-index: 1;
    transition: all .3s ease-in-out;
}
.service_single_content p{
    margin-bottom: 0
}
.light-version .service_single_content.food{
    background: #5a20c6;
    padding-bottom: 40px;
    overflow: hidden;
    position: relative;
}
.light-version .service_single_content.food h6{
    color: #fff
}
.light-version .service_single_content.food h5{
    position: absolute;
    top: 17px;
    right: -49px;
    transform: rotate(41deg);
    background: red;
    padding: 10px 58px;
    color: #fff;
}
/* ... */

